fix safari stretching

--- a/src/blog/styles.scss
+++ b/src/blog/styles.scss
@@ -53,9 +53,11 @@
     padding: 12px 0;
     display: flex;
     justify-content: center;
+    align-items: flex-start; /* new */
   }
   img {
     max-width: 100%;
+    height: auto;
   }
 }
 
